Bug 387304 - lateX-export generates wrong encoded code for matrices
Summary: lateX-export generates wrong encoded code for matrices
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: maxima-backend (other bugs)
Version First Reported In: 16.08
Platform: Debian stable Linux
: NOR minor
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-25 16:14 UTC by Enrico Bessini Sylva
Modified: 2018-06-03 08:26 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.04.2
Sentry Crash Report:


Attachments
result of incorrect delimiter in matrices (5.36 KB, image/png)
2017-11-25 16:14 UTC, Enrico Bessini Sylva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Enrico Bessini Sylva 2017-11-25 16:14:55 UTC
Created attachment 109060 [details]
result of incorrect delimiter in matrices

Exporting matrices to lateX generates wrong encoded code for matrices:

While exporting to lateX cantor writes
&
as delimiter instead of
&
into the generated teX-file.

LateX understands the & as the delimiter but prints out the remaining amp; (see attachment).
Comment 1 Alexander Semke 2018-01-08 21:03:56 UTC
which backend did you use?
Comment 2 Nikita Sirgienko 2018-05-06 17:22:48 UTC
I think, this is Maxima backend, and I confirm this bug.
Comment 3 Nikita Sirgienko 2018-05-09 21:32:21 UTC
Git commit c1c3c209b82b4891a00b2ba8cfc0b75b8cf30989 by Nikita Sirgienko.
Committed on 09/05/2018 at 21:32.
Pushed by sirgienko into branch 'master'.

Improve LaTeX worksheet export

Summary:
Remove unused filter, add extention for exported file, if it not setted, set correct xml attribute for latexresult and add decoding HTML '&', '>', '<' characters to valid for LaTeX characters
FIXED-IN: 18.04.2

Test Plan:
1) Write Maxima worksheet with matrixs and comparison operations.
2) Export the worksheet to LaTeX
3) See tex output and check, that the result is incorrect for LaTeX
4) Apply the patch
5) Export again and check, that now the result is correct and may be builded with LaTeX

Reviewers: #cantor, asemke

Reviewed By: #cantor, asemke

Subscribers: kde-edu, asemke, #cantor

Tags: #kde_edu, #cantor

Differential Revision: https://phabricator.kde.org/D12767

M  +4    -3    src/cantor_part.cpp
M  +1    -1    src/lib/latexresult.cpp
M  +4    -1    src/worksheet.cpp

https://commits.kde.org/cantor/c1c3c209b82b4891a00b2ba8cfc0b75b8cf30989
Comment 4 Alexander Semke 2018-06-03 08:26:10 UTC
Git commit c87f658564045387cb5e2426cce59a6973300196 by Alexander Semke, on behalf of Nikita Sirgienko.
Committed on 03/06/2018 at 08:26.
Pushed by asemke into branch 'Applications/18.04'.

Improve LaTeX worksheet export

Summary:
Remove unused filter, add extention for exported file, if it not setted, set correct xml attribute for latexresult and add decoding HTML '&', '>', '<' characters to valid for LaTeX characters
FIXED-IN: 18.04.2

Test Plan:
1) Write Maxima worksheet with matrixs and comparison operations.
2) Export the worksheet to LaTeX
3) See tex output and check, that the result is incorrect for LaTeX
4) Apply the patch
5) Export again and check, that now the result is correct and may be builded with LaTeX

Reviewers: #cantor, asemke

Reviewed By: #cantor, asemke

Subscribers: kde-edu, asemke, #cantor

Tags: #kde_edu, #cantor

Differential Revision: https://phabricator.kde.org/D12767

M  +4    -3    src/cantor_part.cpp
M  +1    -1    src/lib/latexresult.cpp
M  +4    -1    src/worksheet.cpp

https://commits.kde.org/cantor/c87f658564045387cb5e2426cce59a6973300196