Improve LaTeX worksheet export

Summary:
Remove unused filter, add extention for exported file, if it not setted, set correct xml attribute for latexresult and add decoding HTML '&', '>', '<' characters to valid for LaTeX characters

BUG: 387304
FIXED-IN: 18.04.2

Test Plan:
1) Write Maxima worksheet with matrixs and comparison operations.
2) Export the worksheet to LaTeX
3) See tex output and check, that the result is incorrect for LaTeX
4) Apply the patch
5) Export again and check, that now the result is correct and may be builded with LaTeX

Reviewers: #cantor, asemke

Reviewed By: #cantor, asemke

Subscribers: kde-edu, asemke, #cantor

Tags: #kde_edu, #cantor

Differential Revision: https://phabricator.kde.org/D12767